--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -92,7 +92,9 @@
         <li>Automatic Reminders</li>
     </ul>
     <hr>
-    <h3> KatTracker</h3>
+    <h3> <%= link_to "http://www.kattracker.com", class: "", target: "_blank" do %>
+     KatTracker
+    <% end %></h3>
     <p>Created for Catfish Tournaments.</p>
     <%= render "slides/kattracker_slideshow" %>
     <br>
@@ -107,8 +109,11 @@
         <li>Responsive/Mobile Design</li>
     </ul>
     <hr>
-    <h3> Photos by Charisse</h3>
+    <h3><%= link_to "https://charisee-photography-bhicks8364.c9users.io/", class: "", target: "_blank" do %>
+     Photos by Charisse
+    <% end %></h3>
     <p>Created for Charisse Photography.</p>
+    
     <%= render "slides/photography_slideshow" %>
     <br>
     <p>Some key features:</p>
