--- a/app/views/main/_life_slideshow.html.erb
+++ b/app/views/main/_life_slideshow.html.erb
@@ -14,6 +14,11 @@
       </div>
     </div>
     <div class="item">
+      <%= image_tag("first-of-all.jpg", class: "img-responsive rounded") %>
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
       <%= image_tag("reason.jpg", class: "img-responsive rounded") %>
       <div class="carousel-caption">
       </div>
@@ -24,7 +29,7 @@
       </div>
     </div>
     <div class="item">
-      <%= image_tag("t-shirts/code-hearted-curly-girl.jpg", class: "img-responsive") %>
+      <%= image_tag("bacon-quote-8.jpg", class: "img-responsive rounded") %>
       <div class="carousel-caption">
       </div>
     </div>
