--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -1,126 +1,131 @@
-<div class="col-md-3">	
-    
-    <div class="darkbox">
+<div class="container darkbox">
+    <div class="col-md-3">	
         <h2 class="text-center">Skills</h2>
-    	<h3>Software</h3>
-    	<ul>
-    	    <li>Microsoft Office Suite</li>
-    	    <li>Adobe Photoshop</li>
-    	    <li>Peachtree</li>
-    	    <li>ADP Run</li>
-    	    <li>Other enterprise software</li>
-    	</ul>
-    
-        <h3>Web Development</h3>
-        <ul>
-            <li>HTML/HTML5</li>
-            <li>CSS3/CSS</li>
-            <li>JavaScript/jQuery</li>
-            <li>Ruby on Rails</li>
-        </ul>
-        <hr>
-        <h2>Education</h2>
-        <ul class="list-unstyled">
-          <li><span class="degree">Associate of Arts</span> <span class="date">May 2015</span></li>
-          <li class="school"> Lorain County Community College</li>
-        </ul>
-        <ul class="list-unstyled">
-          <li><span class="degree">Web & Graphic Design Certificate</span> <span class="date">May 2008</span></li>
-          <li class="school">     Lorain County Joint Vocational School</li>
-        </ul>
-        <ul class="list-unstyled">
-          <li> <span class="degree">Diploma</span> <span class="date"> May 2008 </span></li>
-          <li class="school">Midview High School</li>
-        </ul>
+        <div class="darkbox shadow">
+            
+        	<h3>Software</h3>
+        	<ul>
+        	    <li>Microsoft Office Suite</li>
+        	    <li>Adobe Photoshop</li>
+        	    <li>Peachtree</li>
+        	    <li>ADP Run</li>
+        	    <li>Other enterprise software</li>
+        	</ul>
+        
+            <h3>Web Development</h3>
+            <ul>
+                <li>HTML/HTML5</li>
+                <li>CSS3/CSS</li>
+                <li>JavaScript/jQuery</li>
+                <li>Ruby on Rails</li>
+            </ul>
+            <hr>
+            <h2>Education</h2>
+            <ul class="list-unstyled">
+              <li><span class="degree">Associate of Arts</span> <span class="date">May 2015</span></li>
+              <li class="school"> Lorain County Community College</li>
+            </ul>
+            <ul class="list-unstyled">
+              <li><span class="degree">Web & Graphic Design Certificate</span> <span class="date">May 2008</span></li>
+              <li class="school">     Lorain County Joint Vocational School</li>
+            </ul>
+            <ul class="list-unstyled">
+              <li> <span class="degree">Diploma</span> <span class="date"> May 2008 </span></li>
+              <li class="school">Midview High School</li>
+            </ul>
+        </div>
     </div>
-</div>
-<div class="col-md-6">
-    
-    <div class="darkbox">
+    <div class="col-md-6">
         <h2 class="text-center">Work History</h2>
-        <div class="darkerbox">
-        <p class="date">February 2015 – Present	</p>	
-        
-        <h4>IncluStaff <span class="job-title">Founder / Developer</span></h4>
-        <p>Developed the first all-in-one software system specifically designed for staffing agencies. Designed and implemented industry specific features such as advanced user 
-        authentication and authorization, geo location for time tracking, automatic invoices, audit trail, instant job order and more.</p>
-        </div>
-        <div class="darkerbox">
-        <p class="date">February 2016 - Present	</p>
-        
-        <h4>Global Technical Recruiters <span class="job-title">Payroll Processor</span></h4>
-        <p>Process weekly payroll. Apply garnishments, child support and other court ordered/voluntary deductions, maintain and update databases, track paid time off, 
-        coordinate health coverage eligibility and set up direct deposits.</p>
-        </div>
-        <div class="darkerbox">
-        <p class="date">September 2014 – February 2016</p>
-        	
-        <h4>Lighthouse HR Group <span class="job-title">HR Assistant</span></h4>
-        <p>Provides administrative support to the Human Resources Director on all personnel matters and assists with payroll processing. 
-        Performs customer service functions by answering employee requests and questions. Other duties include assisting with recruitment and 
-        interview process, as well as with audits of various payroll, benefits or other HR programs and recommends any corrective action.</p>
-        </div>
-        <div class="darkerbox">
-        <p class="date">March 2013 – September 2014	</p>
-        
-        <h4>Global Technical Recruiters <span class="job-title">Payroll/HR Coordinator</span></h4>
-        <p>Process weekly payroll for 700+ employees, apply garnishments, child support and other court ordered/voluntary deductions, maintain and update databases,
-        track paid time off, coordinate health coverage eligibility and set up direct deposits. Collect data and prepare all relevant management reports. Administer
-        WOTC tax credit program across 10 offices. Train branch administrators and recruiters on HR compliance issues including I-9 and hiring practices. Assume payroll 
-        manager duties in her absence.</p>
+        <div class="darkbox shadow">
+            
+            <div class="darkerbox">
+            <p class="date big">February 2015 – Present	</p>	
+            
+            <h4>IncluStaff <span class="job-title">Founder / Developer</span></h4>
+            <p>Developed the first all-in-one software system specifically designed for staffing agencies. Designed and implemented industry specific features such as advanced user 
+            authentication and authorization, geo location for time tracking, automatic invoices, audit trail, instant job order and more.</p>
+            </div>
+            <div class="darkerbox">
+            <p class="date">February 2016 - Present	</p>
+            
+            <h4>Global Technical Recruiters <span class="job-title">Payroll Processor</span></h4>
+            <p>Process weekly payroll. Apply garnishments, child support and other court ordered/voluntary deductions, maintain and update databases, track paid time off, 
+            coordinate health coverage eligibility and set up direct deposits.</p>
+            </div>
+            <div class="darkerbox">
+            <p class="date">September 2014 – February 2016</p>
+            	
+            <h4>Lighthouse HR Group <span class="job-title">HR Assistant</span></h4>
+            <p>Provides administrative support to the Human Resources Director on all personnel matters and assists with payroll processing. 
+            Performs customer service functions by answering employee requests and questions. Other duties include assisting with recruitment and 
+            interview process, as well as with audits of various payroll, benefits or other HR programs and recommends any corrective action.</p>
+            </div>
+            <div class="darkerbox">
+            <p class="date">March 2013 – September 2014	</p>
+            
+            <h4>Global Technical Recruiters <span class="job-title">Payroll/HR Coordinator</span></h4>
+            <p>Process weekly payroll for 700+ employees, apply garnishments, child support and other court ordered/voluntary deductions, maintain and update databases,
+            track paid time off, coordinate health coverage eligibility and set up direct deposits. Collect data and prepare all relevant management reports. Administer
+            WOTC tax credit program across 10 offices. Train branch administrators and recruiters on HR compliance issues including I-9 and hiring practices. Assume payroll 
+            manager duties in her absence.</p>
+            </div>
         </div>
     </div>
-</div>
-<div class="col-md-3 darkbox">
-    <h2 class="text-center">Projects</h2>
-    
-    <br>
-    <h3> IncluStaff</h3>
-    <p>Created for Staffing Agencies.</p>
-    <%= render "slides/inclustaff_slideshow" %>
-    <br>
-    <p>Some key features:</p>
-    <ul>
-        <li>Responsive Design</li>
-        <li>User Authentication</li>
-        <li>Role-based Authorization</li>
-        <li>Geolocation</li>
-        <li>Custom Subdomains</li>
-        <li>In-app Messaging</li>
-        <li>PDF & CSV exports</li>
-        <li>Data Tables & Charts</li>
-        <li>Automatic Reminders</li>
-    </ul>
-    <hr>
-    <h3> <%= link_to "http://www.kattracker.com", class: "", target: "_blank" do %>
-     KatTracker
-    <% end %></h3>
-    <p>Created for Catfish Tournaments.</p>
-    <%= render "slides/kattracker_slideshow" %>
-    <br>
-    <p>Some key features:</p>
-    <ul>
-        <li>Member Sign In/Up</li>
-        <li>Automatic Notifications</li>
-        <li>Weight & Status Tracking</li>
-        <li>Image Uploading</li>
-        <li>Geolocation Tracking</li>
-        <li>Tournament Management</li>
-        <li>Responsive/Mobile Design</li>
-    </ul>
-    <hr>
-    <h3><%= link_to "https://charisee-photography-bhicks8364.c9users.io/", class: "", target: "_blank" do %>
-     Photos by Charisse
-    <% end %></h3>
-    <p>Created for Charisse Photography.</p>
-    
-    <%= render "slides/photography_slideshow" %>
-    <br>
-    <p>Some key features:</p>
-    <ul>
-        <li>Responsive Design</li>
-        <li>Customer Sign In/Up</li>
-        <li>Image Uploading</li>
-        <li>Appointment Management</li>
-    </ul>
+    <div class="col-md-3">
+        <h2 class="text-center big">Projects</h2>
+        <div class="darkbox shadow">
+            <br>
+            <h3><%= link_to "https://www.inclustaff.com", class: "", target: "_blank" do %>
+             IncluStaff
+            <% end %></h3>
+            <p>Created for Staffing Agencies.</p>
+            <%= render "slides/inclustaff_slideshow" %>
+            <br>
+            <p>Some key features:</p>
+            <ul>
+                <li>Responsive Design</li>
+                <li>User Authentication</li>
+                <li>Role-based Authorization</li>
+                <li>Geolocation</li>
+                <li>Custom Subdomains</li>
+                <li>In-app Messaging</li>
+                <li>PDF & CSV exports</li>
+                <li>Data Tables & Charts</li>
+                <li>Automatic Reminders</li>
+            </ul>
+            <hr>
+            <h3> <%= link_to "http://www.kattracker.com", class: "", target: "_blank" do %>
+             KatTracker
+            <% end %></h3>
+            <p>Created for Catfish Tournaments.</p>
+            <%= render "slides/kattracker_slideshow" %>
+            <br>
+            <p>Some key features:</p>
+            <ul>
+                <li>Member Sign In/Up</li>
+                <li>Automatic Notifications</li>
+                <li>Weight & Status Tracking</li>
+                <li>Image Uploading</li>
+                <li>Geolocation Tracking</li>
+                <li>Tournament Management</li>
+                <li>Responsive/Mobile Design</li>
+            </ul>
+            <hr>
+            <h3><%= link_to "https://charisee-photography-bhicks8364.c9users.io/", class: "", target: "_blank" do %>
+             Photos by Charisse
+            <% end %></h3>
+            <p>Created for Charisse Photography.</p>
+            
+            <%= render "slides/photography_slideshow" %>
+            <br>
+            <p>Some key features:</p>
+            <ul>
+                <li>Responsive Design</li>
+                <li>Customer Sign In/Up</li>
+                <li>Image Uploading</li>
+                <li>Appointment Management</li>
+            </ul>
+        </div>
+    </div>
 </div>
