--- a/app/views/main/_life_slideshow.html.erb
+++ b/app/views/main/_life_slideshow.html.erb
@@ -19,12 +19,22 @@
       </div>
     </div>
     <div class="item">
+      <%= image_tag("documents.png", class: "img-responsive rounded") %>
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag("badass.jpg", class: "img-responsive rounded") %>
+      <div class="carousel-caption">
+      </div>
+    </div>
+    <div class="item">
       <%= image_tag("reason.jpg", class: "img-responsive rounded") %>
       <div class="carousel-caption">
       </div>
     </div>
     <div class="item">
-      <%= image_tag("camping.jpg", class: "img-responsive rounded") %>
+      <%= image_tag("brick-wall.jpg", class: "img-responsive rounded") %>
       <div class="carousel-caption">
       </div>
     </div>
