--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -1,14 +1,11 @@
 <div class="col-md-3">
-    <div class="col-md-6">
-        
-    </div>
 </div>
 <div class="col-md-6 darkbox">
     <h1 class="text-center">Contact</h1>
     <div class="col-md-12 text-center bottom-border white">
         <h2 class="text-left middle"><%= fa_icon "envelope-o 2x", class: "text-info pull-left" %>&nbsp;Email</h2></h2>
         <a href="mailto:bhicks8364@gmail.com?Subject=Hello%20world" target="_top">
-            <h2 class="text-lrft"> bhicks8364@gmail.com</h2></a>
+            <h2 class="text-left"> bhicks8364@gmail.com</h2></a>
     </div>
     
     <div class="col-md-12 text-center">
