--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,9 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="<%= params[:action] == "about" ? "active" : "" %> nav-link"><%= link_to "About", about_path %></li>
         <li class="<%= params[:action] == "learning" ? "active" : "" %> nav-link"><%= link_to "Learn", learn_path %></li>
+        <% if @posts.present? %>
         <li class="<%= params[:action] == "blog" ? "active" : "" %> nav-link"><%= link_to "Blog", blog_posts_path %></li>
+        <% end %>
         <li class="<%= params[:action] == "contact" ? "active" : "" %> nav-link"><%= link_to "Contact", contact_path %></li>
         <li class="<%= params[:action] == "resume" ? "active" : "" %> nav-link"><%= link_to "Resume", resume_path %></li>
         <li class="dropdown">
