--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -1,7 +1,7 @@
 <div class="container darkbox">
-    <div class="col-md-3">	
-        <h2 class="text-center">Skills</h2>
-        <div class="darkbox shadow">
+    <div class="col-md-3 shadow">	
+        <h2 class="text-center big">Skills</h2>
+        <div class="darkerbox shadow">
             
         	<h3>Software</h3>
         	<ul>
@@ -36,11 +36,11 @@
         </div>
     </div>
     <div class="col-md-6">
-        <h2 class="text-center">Work History</h2>
+        <h2 class="text-center big">Work History</h2>
         <div class="darkbox shadow">
             
             <div class="darkerbox">
-            <p class="date big">February 2015 – Present	</p>	
+            <p class="date">February 2015 – Present	</p>	
             
             <h4>IncluStaff <span class="job-title">Founder / Developer</span></h4>
             <p>Developed the first all-in-one software system specifically designed for staffing agencies. Designed and implemented industry specific features such as advanced user 
@@ -74,7 +74,7 @@
     </div>
     <div class="col-md-3">
         <h2 class="text-center big">Projects</h2>
-        <div class="darkbox shadow">
+        <div class="darkerbox shadow">
             <br>
             <h3><%= link_to "https://www.inclustaff.com", class: "", target: "_blank" do %>
              IncluStaff
