--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,19 +1,8 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-4 bg-clear">
-      <%= link_to "Resume", resume_path, class: "btn btn-default btn-lg btn-block" %>
-    </div>
-    <div class="col-md-4 bg-clear"><%= link_to "Web Development", web_dev_path, class: "btn btn-default btn-lg btn-block"  %></div>
-    <div class="col-md-4 bg-clear">
-      
-    </div>
-    
-  </div>
-  
-  <div class="row">
-      <div class="col-md-4 bg-clear">
-        
-      </div>
-      <div class="col-md-4 bg-clear"></div>
-      <div class="col-md-4 bg-clear"><%= render "life_slideshow" %></div>
-  </div>
+<div class="mainpage text-center">
+    <h1 class="big">Brittany Hicks</h1>
+    <h4>Web Developer</h4>
+</div>
+<div class="col-md-4"></div>
+<div class="col-md-4 mainpage text-center">
+    <h2><%= link_to "View Resume", resume_path, class: "btn btn-default btn-lg btn-block"  %></h2>
+</div>
