--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -5,10 +5,10 @@
     <div class="col-md-12 text-center bottom-border white">
         <h2 class="text-left middle"><%= fa_icon "envelope-o 2x", class: "text-info pull-left" %>&nbsp;Email</h2></h2>
         <a href="mailto:bhicks8364@gmail.com?Subject=Hello%20world" target="_top">
-            <h2 class="text-left"> bhicks8364@gmail.com</h2></a>
+            <h4 class="text-center"> bhicks8364@gmail.com</h4></a>
     </div>
     
-    <div class="col-md-12 text-center">
+    <div class="col-md-6 text-center">
         <h2 class="text-left middle">
             <%= fa_icon "linkedin-square 2x", class: "text-info pull-left" %>&nbsp;LinkedIn</h2>
         <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
