--- a/app/views/main/learning.html.erb
+++ b/app/views/main/learning.html.erb
@@ -2,19 +2,19 @@
     <h1>How I Learned</h1>
     <hr>
     <h2>Ruby On Rails</h2>
-    <div class="col-md-4 well">
+    <div class="col-md-4 well school-logo-box">
         <a href="http://www.gorails.com" target="_blank">
         <%= image_tag("gorails_logo.svg", class: "img-responsive") %>
         </a>
     </div>
-    <div class="col-md-4 well">
+    <div class="col-md-4 well school-logo-box">
         <a href="http://www.railscasts.com" target="_blank">
             <%= image_tag("railscasts_logo.png", class: "img-responsive") %>
         </a>
     </div>
-    <div class="col-md-4 well">
+    <div class="col-md-4 well school-logo-box">
         <a href="https://mackenziechild.me/" target="_blank" class="logo-img">
-            
+            <%= image_tag("freecodecamp_logo.svg", class: "img-responsive") %>
         </a>
     </div>
     
