Fixed resume links

--- a/app/views/portfolio/web_sites.html.erb
+++ b/app/views/portfolio/web_sites.html.erb
@@ -2,7 +2,7 @@
     <h1 class="text-center white bold">Web Development</h1>
     <hr>
     <div class="col-md-6 well lighter">
-        <h2 class="bold big">
+        <h2 class="bold white">
         <%= link_to "http://www.inclustaff.com", class: "", target: "_blank" do %>
         IncluStaff 
         <% end %>
@@ -10,7 +10,7 @@
          <%= render "main/web_slideshow" %>
     </div>
     <div class="col-md-6 well">
-         <h2 class="bold">
+         <h2 class="bold white">
         <%= link_to "http://www.inclustaff.com", class: "", target: "_blank" do %>
         KatTracker 
         <% end %>
