--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -199,3 +199,9 @@ div.card {
     margin-top: 30px;
     padding-top: 30px;
 }
+#navbar > ul > li.dropdown.open > ul > li > a {
+    color: black;
+}
+a.white {
+    color: white;
+}
