--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -76,7 +76,7 @@
         <h2 class="text-center big">Projects</h2>
         <div class="darkerbox shadow">
             <br>
-            <h3><%= link_to "https://www.inclustaff.com", class: "", target: "_blank" do %>
+            <h3><%= link_to "https://www.inclustaff.com", class: "white", target: "_blank" do %>
              IncluStaff
             <% end %></h3>
             <p>Created for Staffing Agencies.</p>
@@ -95,7 +95,7 @@
                 <li>Automatic Reminders</li>
             </ul>
             <hr>
-            <h3> <%= link_to "http://www.kattracker.com", class: "", target: "_blank" do %>
+            <h3> <%= link_to "http://www.kattracker.com", class: "white", target: "_blank" do %>
              KatTracker
             <% end %></h3>
             <p>Created for Catfish Tournaments.</p>
@@ -112,7 +112,7 @@
                 <li>Responsive/Mobile Design</li>
             </ul>
             <hr>
-            <h3><%= link_to "https://charisee-photography-bhicks8364.c9users.io/", class: "", target: "_blank" do %>
+            <h3><%= link_to "https://charisee-photography-bhicks8364.c9users.io/", class: "white", target: "_blank" do %>
              Photos by Charisse
             <% end %></h3>
             <p>Created for Charisse Photography.</p>
