--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -1,9 +1,11 @@
 <div class="col-md-3">
-    <%= image_tag("brit-pic.jpg", class: "img-responsive") %>
+    <%= image_tag("brit-pic.jpg", class: "img-responsive bounceIn") %>
+    
 </div>
  
 <div class="col-md-9 bg-black">
-    <h1 class="rock white">Hey there - I'm Brittany!</h1>
+    <h1 class="white bounceIn4">Hey there - I'm Brittany!</h1>
+    
     <p>
         I've always loved art & design. I found my love for it high school when I spent my junior & senior years at the Lorain County JVS 
         in the Web & Graphic Design program. From there I attended The Art Institute of Pittsburgh as a graphic design major. 
