--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,8 +1,13 @@
-<div class="mainpage text-center">
-    <h1 class="big">Brittany Hicks</h1>
-    <h4>Web Developer</h4>
-</div>
-<div class="col-md-4"></div>
-<div class="col-md-4 mainpage text-center">
-    <h2><%= link_to "View Resume", resume_path, class: "btn btn-default btn-lg btn-block"  %></h2>
+<div class="row">
+    <div class="mainpage text-center">
+        <h1 class="big bounceIn">Brittany Hicks</h1>
+        <h4 class="bounceIn4">Web Developer</h4>
+        
+    </div>
+    <div class="bounceIn6">
+        <div class="text-center">
+            <%= link_to "View Resume", resume_path, class: "btn index-btn"  %>
+        </div>
+    </div>
+    
 </div>
