--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -1,6 +1,6 @@
 <div class="container darkbox">
     <div class="col-md-3 shadow">	
-        <h2 class="text-center big">Skills</h2>
+        <h2 class="text-center big bounceIn4">Skills</h2>
         <div class="darkerbox shadow">
             
         	<h3>Software</h3>
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="col-md-6">
-        <h2 class="text-center big">Work History</h2>
+        <h2 class="text-center big bounceIn4">Work History</h2>
         <div class="darkbox shadow">
             
             <div class="darkerbox">
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        <h2 class="text-center big">Projects</h2>
+        <h2 class="text-center big bounceIn4">Projects</h2>
         <div class="darkerbox shadow">
             <br>
             <h3><%= link_to "https://www.inclustaff.com", class: "white", target: "_blank" do %>
