--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -4,7 +4,7 @@
     <h1 class="text-center">Contact</h1>
     <div class="col-md-12 text-center bottom-border white">
         <h2 class="text-left middle"><%= fa_icon "envelope-o 2x", class: "text-info pull-left" %>&nbsp;Email</h2></h2>
-        <a href="mailto:bhicks8364@gmail.com?Subject=Hello%20world" target="_top">
+        <a href="mailto:bhicks8364@gmail.com?Subject=Hello%20world" class="white" target="_top">
             <h4 class="text-center"> bhicks8364@gmail.com</h4></a>
     </div>
     
