--- a/app/views/main/life.html.erb
+++ b/app/views/main/life.html.erb
@@ -1,13 +1,58 @@
-<div class="col-md-12">
-    <h1>Random <3</h1>
+<div class="row darkerbox shadow">
     <div class="col-md-8">
-        <div class="embed-responsive embed-responsive-16by9">
-            <%= embed("https://www.youtube.com/watch?v=_BQZOFUX2-Q") %>
+         <h1>Music <3</h1>
+        <hr>
+        <h4>Inspiring</h4>
+        <div class="col-md-6">
+            <h2>Fight Like A Girl</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://www.youtube.com/watch?v=_BQZOFUX2-Q") %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h2>Read Me My Rights</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://www.youtube.com/watch?v=_A-Z5YlgCgg") %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h2>Fight Song</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://www.youtube.com/watch?v=xo1VInw-SKc") %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h2>The Girl You Think I Am</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://www.youtube.com/watch?v=-g4tovaGQVU") %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h2>Fly</h2>
+            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://www.youtube.com/watch?v=KfDr_7LN-Ew") %>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h2>The Waitress Song</h2>
+a            <div class="embed-responsive embed-responsive-16by9">
+                <%= embed("https://youtu.be/Jbxsks0EvCc?list=PLGyqIulv1Jm-oJ408Zo0qBTD7hKkfjer4") %>
+            </div>
         </div>
     </div>
-    
     <div class="col-md-4">
-        <h1>More <3</h1>
-        <%= render "main/life_slideshow" %>
+        <h1>Quotes <3</h1>
+            <hr>
+        <div class="col-md-8">
+            <%= image_tag("Janis-Joplin.jpg", class: "img-responsive rounded") %>
+        </div>
+    <div class="col-md-12">
+        <h1>Inspiration <3</h1>
+            <hr>
+        <%= image_tag("badass.jpg", class: "img-responsive") %>
     </div>
+    <div class="col-md-8">
+        <%= image_tag("life-quote-pursuit-happiness-dream.jpg", class: "img-responsive rounded") %>
+    </div>
+            
 </div>
