--- a/app/views/main/resume.html.erb
+++ b/app/views/main/resume.html.erb
@@ -1,10 +1,10 @@
 <div class="container darkbox">
     <div class="col-md-3 shadow">	
-        <h2 class="text-center big bounceIn4">Skills</h2>
+        <h2 class="text-center big bounceIn ">Skills</h2>
         <div class="darkerbox shadow">
             
-        	<h3>Software</h3>
-        	<ul>
+        	<h3 >Software</h3>
+        	<ul class="">
         	    <li>Microsoft Office Suite</li>
         	    <li>Adobe Photoshop</li>
         	    <li>Peachtree</li>
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="col-md-3">
-        <h2 class="text-center big bounceIn4">Projects</h2>
+        <h2 class="text-center big bounceIn6">Projects</h2>
         <div class="darkerbox shadow">
             <br>
             <h3><%= link_to "https://www.inclustaff.com", class: "white", target: "_blank" do %>
