--- a/app/views/portfolio/tshirts.html.erb
+++ b/app/views/portfolio/tshirts.html.erb
@@ -1,19 +1,19 @@
 <div class="row">
     <h1 class="white text-center page-header">T-shirt Designs</h1>
     <div class="col-sm-6 col-md-4">
-        <%= image_tag("t-shirts/code-hearted-i-prefer-ruby.png", class: "img-responsive") %>
+        <%= image_tag("t-shirts/code-hearted-i-prefer-ruby.png", class: "img-responsive bounceIn") %>
     </div>
     <div class="col-sm-6 col-md-4">
-        <%= image_tag("t-shirts/code-hearted-united-we-code-b&w.png", class: "img-responsive") %>
+        <%= image_tag("t-shirts/code-hearted-united-we-code-b&w.png", class: "img-responsive bounceIn") %>
     </div>
     <div class="col-sm-6 col-md-4">
-        <%= image_tag("t-shirts/code-hearted-hacker-with-heart.png", class: "img-responsive") %>
+        <%= image_tag("t-shirts/code-hearted-hacker-with-heart.png", class: "img-responsive bounceIn4") %>
     </div>
     <div class="col-sm-6 col-md-4">
-        <%= image_tag("t-shirts/code-hearted-united-we-code.png", class: "img-responsive") %>
+        <%= image_tag("t-shirts/code-hearted-united-we-code.png", class: "img-responsive bounceIn4") %>
     </div>
     <div class="col-sm-6 col-md-4">
-        <%= image_tag("t-shirts/code-hearted-curly-girl.jpg", class: "img-responsive") %>
+        <%= image_tag("t-shirts/code-hearted-curly-girl.jpg", class: "img-responsive bounceIn") %>
     </div>
     
 </div>
