--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,20 +13,26 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="<%= params[:action] == "about" ? "active" : "" %> nav-link"><%= link_to "About", about_path %></li>
-        <li class="<%= params[:action] == "learning" ? "active" : "" %> nav-link"><%= link_to "Learn", learn_path %></li>
-        <% if @posts.present? %>
-        <li class="<%= params[:action] == "blog" ? "active" : "" %> nav-link"><%= link_to "Blog", blog_posts_path %></li>
-        <% end %>
-        <li class="<%= params[:action] == "contact" ? "active" : "" %> nav-link"><%= link_to "Contact", contact_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li class="<%= params[:action] == "about" ? "active" : "" %> nav-link"><%= link_to "My Story", about_path %></li>
+            <li class="<%= params[:action] == "learning" ? "active" : "" %> nav-link"><%= link_to "Resources", learn_path %></li>
+          </ul>
+        </li>
         <li class="<%= params[:action] == "resume" ? "active" : "" %> nav-link"><%= link_to "Resume", resume_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Portfolio <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li class="nav-link"><%= link_to "Web Development", web_dev_path %></li>
-            <li class="nav-link"><%= link_to "T-Shirt Design", tshirts_path %></li>
+            <li class="<%= params[:action] == "web_dev" ? "active" : "" %> nav-link"><%= link_to "Web Development", web_dev_path %></li>
+            <li class="<%= params[:action] == "tshirts" ? "active" : "" %> nav-link"><%= link_to "T-Shirt Design", tshirts_path %></li>
           </ul>
         </li>
+        <% if @posts.present? %>
+        <li class="<%= params[:action] == "blog" ? "active" : "" %> nav-link"><%= link_to "Blog", blog_posts_path %></li>
+        <% end %>
+        <li class="<%= params[:action] == "contact" ? "active" : "" %> nav-link"><%= link_to "Contact", contact_path %></li>
+        
       </ul>
     </div><!--/.nav-collapse -->
   </div>
