--- a/app/views/portfolio/web_sites.html.erb
+++ b/app/views/portfolio/web_sites.html.erb
@@ -1,20 +1,20 @@
 <div class="col-md-12">
     <h1 class="text-center white bold">Web Development</h1>
     <hr>
-    <div class="col-md-6 well lighter">
+    <div class="col-md-6 darkbox">
         <h2 class="bold white">
-        <%= link_to "http://www.inclustaff.com", class: "", target: "_blank" do %>
+        <%= link_to "http://www.inclustaff.com", class: "white", target: "_blank" do %>
         IncluStaff 
         <% end %>
         </h2>
          <%= render "main/web_slideshow" %>
     </div>
-    <div class="col-md-6 well">
-         <h2 class="bold white">
-        <%= link_to "http://www.inclustaff.com", class: "", target: "_blank" do %>
+    <div class="col-md-6 darkbox">
+         <h2 class="bold">
+        <%= link_to "http://www.inclustaff.com", class: "white", target: "_blank" do %>
         KatTracker 
         <% end %>
         </h2>
-        <%= image_tag("kattracker1.png", class: "img-responsive") %>
+        <%= image_tag("kattracker1.png", class: "img-responsive ") %>
     </div>
 </div>
