--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-md-12">
 
-    <div class="col-md-8 darkerbox black rounded shadow text-center">
+    <div class="col-md-8 darkerbox black shadow text-center">
         <h1 class="big">Brittany Hicks</h1>
         <h4 class="">Web Developer</h4>
         
@@ -28,10 +28,10 @@
                 <%= image_tag("bridge_halloween2.png", class: "img-responsive rounded") %>
             </div>
             
-            <div class="col-md-8">
+            <div class="col-md-4">
                 <%= image_tag("camping.png", class: "img-responsive rounded") %>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-8">
                 <%= image_tag("dad_christmas.jpg", class: "img-responsive rounded") %>
             </div>
             
