--- a/app/views/blog/posts/show.html.erb
+++ b/app/views/blog/posts/show.html.erb
@@ -6,7 +6,7 @@
  <div class="col-md-12 darkerbox">
     <p class="lead"><%=@post.body %></p>
     <% if @post.source_url.present? %>
-    <%= link_to "Learn More...", @post.source_url, target: "_blank", class: "big"  %>
+    <%= link_to "Learn More...", @post.source_url, target: "_blank", class: "big pull-right"  %>
     <% else %>
     <% end %>
  </div>
